Summary: | ASTERISK-25367: pbx: Long pattern match hints may cause "core show hints" to crash | ||
Reporter: | Joshua C. Colp (jcolp) | Labels: | |
Date Opened: | 2015-09-02 12:42:54 | Date Closed: | 2015-09-02 17:23:20 |
Priority: | Minor | Regression? | Yes |
Status: | Closed/Complete | Components: | Core/PBX |
Versions: | Frequency of Occurrence | ||
Related Issues: | |||
Environment: | Attachments: | ||
Description: | When issuing the "core show hints" CLI command a combination of both the hint extension and context is created. This uses a fixed size buffer expecting that the extension will not exceed maximum extension length. When the extension is actually a pattern match this constraint does not hold true, and the extension may exceed the maximum extension length. In this case extra characters are written past the end of the fixed size buffer. | ||
Comments: |